# ccope

./: .gitignore  CMakeLists.txt  README.md  ToString.h  annotation.h  archive.tar  cursor.h  dir.c  hashmap.c  hashmap.h  lexer.c  lexer.h  log.h  log_impl.c  main.c  parser.c  pool.c  pool.h  pool_test.c  stringstruct.c  stringstruct.h  tokens.c  tokens.h  types.h
example-project/: main.c
example-project/log/: log.c
examples/loglib/: log.c
ideas/: annotations.md  permutations.md
src/: ADT.h  array.c  main.c  main.p
